Fixed Cloud SQL verbiage. Fixed Cloud SQL connection string generation Renamed plugin use of project to projectId

--- a/generators/gae/templates/pom-plugin.xml.ejs
+++ b/generators/gae/templates/pom-plugin.xml.ejs
@@ -17,6 +17,6 @@
  limitations under the License.
 -%>
                 <configuration>
-                    <deploy.project><%=gcpProjectId%></deploy.project>
+                    <deploy.projectId><%=gcpProjectId%></deploy.projectId>
                     <deploy.version>1</deploy.version>
                 </configuration>
